syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld.proto";
option java_outer_classname = "HelloWorldProto";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }

  rpc SayHelloRequestStreaming (stream HelloRequest) returns (HelloReply) {
  }

  rpc SayHelloReturnStreaming (HelloRequest) returns (stream HelloReply) {
  }

  rpc SayHelloStreamings (stream HelloRequest) returns (stream HelloReply) {
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
